changed bit link

--- a/diwali.html
+++ b/diwali.html
@@ -20,7 +20,7 @@
         <h3 class="text-danger text-center">Wishing you in Advance</h3>
         <div class="row">
             <!-- change: image URL link -->
-            <a href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2EP6sHS" class="text-center">
+            <a href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0" class="text-center">
                 <img class="center" height="500" width="300" src="include/img/diwali2.jpg" alt="Nicknet_Videos">
             </a>
         </div>
@@ -29,7 +29,7 @@
         <div class="container row ">
                 <div data-WRID="WRID-154095955996441474" data-widgetType="staticBanner"  data-class="affiliateAdsByFlipkart" height="50" width="320"></div><script async src="//affiliate.flipkart.com/affiliate/widgets/FKAffiliateWidgets.js"></script>
             <div class="col-md-10 col-md-offset-1">
-                <a class="btn btn-info btn-block" href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2EP6sHS"
+                <a class="btn btn-info btn-block" href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0"
                     data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href=""
                     class="wa_btn wa_btn_s"> Share On Whatsapp <span class="pull-right deliv">
                         <img class="img-responsive" src="include/img/whatsapp.png" width="30px;">
