--- a/diwali.html
+++ b/diwali.html
@@ -12,21 +12,22 @@
     <link rel="stylesheet" href="include/stylesheets/style.css">
     <link rel="stylesheet" href="include/stylesheets/font-awesome.min.css">
     <link rel="stylesheet" href="include/stylesheets/bootstrap.min.css">
-    <title>GIFT for You</title>
+    <title>MESSAGE for you...</title>
 </head>
 
-<body style="background: #fff16f;">
+<body style="background: #fadbdb;">
     <div class="" ng-app="nickwish" ng-controller="myWishCtrl">
-        <h3 class="text-danger text-center">Wishing you in Advance</h3>
+        <!-- <h3 class="text-danger text-center">Wishing you in Advance</h3> -->
         <div class="row">
             <!-- change: image URL link -->
             <a href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0" class="text-center">
-                <img class="center" height="500" width="300" src="include/img/diwali2.jpg" alt="Nicknet_Videos">
+                <img class="center" height="500" width="300" src="include/img/diwaligif.gif" alt="Nicknet_Videos">
             </a>
         </div>
         <br>
         <div class="container row ">
             <div class="col-md-10 col-md-offset-1">
+                <p class="text-success text-center"><b>Share with 5 friends.</b></p>
                 <a class="btn btn-info btn-block" href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0"
                     data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href=""
                     class="wa_btn wa_btn_s"> Share On Whatsapp <span class="pull-right deliv">
@@ -35,13 +36,20 @@
             </div>
         </div>
         <br>
-        <div data-WRID="WRID-154096345173123065" data-widgetType="staticBanner"  data-class="affiliateAdsByFlipkart" height="250" width="250"></div><script async src="//affiliate.flipkart.com/affiliate/widgets/FKAffiliateWidgets.js"></script>
-        <script type="text/javascript" language="javascript">
-            var aax_size='300x250';
-            var aax_pubname = 'neonitish-21';
-            var aax_src='302';
-          </script>
-          <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+       <!-- <div> 
+          
+            <div data-WRID="WRID-154096345173123065" data-widgetType="staticBanner" data-class="affiliateAdsByFlipkart"
+                height="250" width="250"></div>
+            <script async src="//affiliate.flipkart.com/affiliate/widgets/FKAffiliateWidgets.js"></script>
+            <script type="text/javascript" language="javascript">
+                var aax_size = '300x250';
+                var aax_pubname = 'neonitish-21';
+                var aax_src = '302';
+            </script>
+            <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+        </div>-->
+
+
     </div>
 
     <!-- util JS -->
