changed call to action

--- a/diwali.html
+++ b/diwali.html
@@ -28,7 +28,7 @@
         <div class="container row ">
             <div class="col-md-10 col-md-offset-1">
                 <p class="text-success text-center"><b>Share with 5 friends.</b></p>
-                <a class="btn btn-info btn-block" href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0"
+                <a class="btn btn-info btn-block" href="whatsapp://send?text=*Click to see.👇👇👇* %0A%0A http://bit.ly/2SxQox0"
                     data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href=""
                     class="wa_btn wa_btn_s"> Share On Whatsapp <span class="pull-right deliv">
                         <img class="img-responsive" src="include/img/whatsapp.png" width="30px;">
