--- a/diwali.html
+++ b/diwali.html
@@ -21,7 +21,8 @@
         <div class="row">
             <!-- change: image URL link -->
             <a href="whatsapp://send?text=*Something for YOU* %0A%0A http://bit.ly/2SxQox0" class="text-center">
-                <img class="center" height="500" width="300" src="include/img/diwaligif.gif" alt="Nicknet_Videos">
+                <img class="center" height="500" style="width: 360px;
+                margin-left: -25px;margin-top: -40px;" src="include/img/diwaligif.gif" alt="Nicknet_Videos">
             </a>
         </div>
         <br>
