--- a/diwali.html
+++ b/diwali.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="include/stylesheets/style.css">
     <link rel="stylesheet" href="include/stylesheets/font-awesome.min.css">
     <link rel="stylesheet" href="include/stylesheets/bootstrap.min.css">
-    <title>MESSAGE for you...</title>
+    <title>Diwali Wish</title>
 </head>
 
 <body style="background: #fadbdb;">
@@ -27,9 +27,12 @@
         </div>
         <br>
         <div class="container row ">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1"> 
                 <p class="text-success text-center"><b>Share with 5 friends.</b></p>
-                <a class="btn btn-info btn-block" href="whatsapp://send?text=*Click to see.👇👇👇* %0A%0A http://bit.ly/2SxQox0"
+                <a class="btn btn-info btn-block" href="whatsapp://send?text=🙏🕯🕯🕯🕯🕯🕯🕯🕯🙏 %0A *श्री राम* आपके घर में सुख की बारिश करें,
+                माता लक्ष्मी आपके धन-धान्य से परिपूर्ण करें,
+                और दीप की रौशनी आपके घर से दुःख-कष्ट को दूर करे. %0A
+               *दीपावली की शुभकामनाएं* %0A Click to share.👇👇👇 %0A http://bit.ly/2SxQox0"
                     data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href=""
                     class="wa_btn wa_btn_s"> Share On Whatsapp <span class="pull-right deliv">
                         <img class="img-responsive" src="include/img/whatsapp.png" width="30px;">
